# polynotes

./: .env.dist  .gitignore  LICENSE  README.md  TAD-MONGO.md  compose.override.yaml  compose.release.yaml  compose.yaml
.github/workflows/: rust_check.yml
backend/: .dockerignore  .env.dist  .gitignore  Cargo.toml  Dockerfile  Makefile
backend/src/: api_error.rs  auth.rs  db.rs  lib.rs  mailer.rs  main.rs  pages.rs  users.rs
backend/src/auth/: error.rs  hash_utils.rs  login.rs  logout.rs  mod.rs  register.rs
backend/src/auth/handlers/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs  verify_email.rs
backend/src/auth/jwt/: claims.rs  mod.rs  secret_keys.rs
backend/src/middlewares/: auth_guard.rs
backend/src/pages/: mod.rs
backend/src/pages/handlers/: delete_page_by_uuid.rs  find_page_by_uuid.rs  insert_or_update_page.rs  mod.rs  update_page.rs
backend/src/pages/models/: abstracted_page.rs  mod.rs  node.rs  page.rs  short_page.rs
backend/src/times/: mod.rs  models.rs
backend/src/users/: error.rs  mod.rs
backend/src/users/handlers/: delete_time_by_uuid.rs  find_all_projects_tags.rs  find_all_users.rs  find_recent_pages.rs  find_time_by_uuid.rs  find_times.rs  find_times_by_date.rs  find_user_by_email.rs  find_user_by_uuid.rs  find_user_pages.rs  find_user_times.rs  get_stats_on_projects.rs  insert_or_update_time.rs  mod.rs
backend/src/users/models/: abstracted_user.rs  mod.rs  time.rs  time_tracker.rs  user.rs  user_role.rs
frontend/: .dockerignore  .env.dist  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AppRoutes.tsx  main.css  main.tsx  store.ts
frontend/src/assets/: main.css
frontend/src/assets/fonts/: fonts.css
frontend/src/assets/json/: cgu.json  commands.json
frontend/src/assets/texts/: manifesto.txt
frontend/src/components/: Button.tsx  Card.tsx  Center.tsx  Form.tsx  InputCheckbox.tsx  InputText.tsx  MainFrame.tsx  ProtectedRoute.tsx
frontend/src/components/VerticalNavbar/: Item.tsx  VerticalNavbar.tsx
frontend/src/components/editor/: DragHandle.tsx  EditorBlock.tsx  EditorManager.tsx  (+3 more)
frontend/src/features/: editorSlice.ts  pagesSlice.ts
frontend/src/hooks/: useApi.ts  useCommandManager.ts
frontend/src/models/: editor-node.ts  index.ts
frontend/src/pages/: CguPage.tsx  EditorPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  WorkspacePage.tsx
frontend/src/typings/: editor.type.ts  page.type.ts  time.type.ts  user.type.ts
frontend/src/utils/: getEditorNodeFromType.tsx  shouldShowPlaceholder.ts
mongo/: create-user.sh  destroy.sh  destruct.sh  init.sh  up.sh
mongo/csrs/: init.js  mongod.conf
mongo/router/: create-mongo-user.js  init.js  mongos.conf  users.json
mongo/rs1/: init.js  mongod.conf
mongo/rs2/: init.js  mongod.conf
(+32 files in other folders)
