[package]
name = "polynotes-backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = "0.10.0"
axum = "0.6.11"
jsonwebtoken = "8.3.0"
mongodb = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["compression-full", "cors"] }
validator = { version = "0.16.0", features = ["derive"] }
