[package]
name = "polynotes-backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aide = "0.10.0"
axum = "0.6.11"
axum-extra = "0.7.1"
bson = { version = "2.6.0", features = ["uuid-1", "chrono-0_4"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.6"
jsonwebtoken = "8.3.0"
lettre = { version = "0.10.3", features = ["tokio1", "tokio1-native-tls"] }
mongodb = "2.4.0"
once_cell = "1.17.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rust-argon2 = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["compression-full", "cors"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
